// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`routes/components/settings/SettingsFooter.tsx app version should show development app version 1`] = `
<span
  title="app-version"
>
  Gitify 
  dev
</span>
`;

exports[`routes/components/settings/SettingsFooter.tsx app version should show production app version 1`] = `
<span
  title="app-version"
>
  Gitify 
  v0.0.1
</span>
`;
